Add navigation bar

--- a/src/index.css
+++ b/src/index.css
@@ -141,7 +141,7 @@ table {
 }
 
 body {
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'PixelSplitter';
     font-style: normal;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
