--- a/src/index.css
+++ b/src/index.css
@@ -29,7 +29,7 @@ h3,
 h4,
 h5,
 h6,
-/* p, */
+p,
 blockquote,
 pre,
 a,
@@ -141,8 +141,7 @@ table {
 }
 
 body {
-    background: #000;
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'PixelSplitter';
     font-style: normal;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
