--- a/src/index.css
+++ b/src/index.css
@@ -167,6 +167,10 @@ code {
   overflow: scroll;
 }
 
+.bn-onboard-custom .bn-onboard-modal-select-wallets {
+  justify-content: center;
+}
+
 .bn-onboard-custom .bn-onboard-icon-button {
   border: 4px solid #000;
   border-radius: 0;
